--- a/ExViewer/Views/SplashControl.xaml
+++ b/ExViewer/Views/SplashControl.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Loading="splash_Loading"
+             UseLayoutRounding="False"
              SizeChanged="splash_SizeChanged">
     <UserControl.Resources>
         <Storyboard x:Name="ShowPic"
