bug fix, new wiki db colunm
Former-commit-id: ea5a4bf791a862eb3aad5618d80c972829959e13 [formerly b1a69880d4ced7087950480f4b331ae1fade3678]
Former-commit-id: 519e696f65d91357cbb5e3bc7ef44ce7210f0931

--- a/ExViewer/Themes/Dark.xaml
+++ b/ExViewer/Themes/Dark.xaml
@@ -6,6 +6,6 @@
     <BitmapImage x:Key="LoadingImageSource"
                  UriSource="ms-appx:///Images/Dark/ImageLoading.png" />
     <SolidColorBrush x:Key="CategoryToggleButtonUncheckedForegroundThemeBrush"
-                     Color="White"
+                     Color="Black"
                      Opacity="0.5" />
 </ResourceDictionary>
