--- a/ExViewer/Themes/Light.xaml
+++ b/ExViewer/Themes/Light.xaml
@@ -6,6 +6,6 @@
     <BitmapImage x:Key="LoadingImageSource"
                  UriSource="ms-appx:///Images/Light/ImageLoading.png" />
     <SolidColorBrush x:Key="CategoryToggleButtonUncheckedForegroundThemeBrush"
-                     Color="Black"
+                     Color="White"
                      Opacity="0.5" />
 </ResourceDictionary>
