--- a/ExViewer/Controls/CommentViewer.xaml
+++ b/ExViewer/Controls/CommentViewer.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             xmlns:con="using:ExViewer.Converters"
+             xmlns:con="using:Opportunity.Converters"
              xmlns:ex="using:ExClient"
              d:DesignHeight="200"
              d:DesignWidth="600"
