--- a/ExViewer/Views/EhWikiDialog.xaml
+++ b/ExViewer/Views/EhWikiDialog.xaml
@@ -1,20 +1,20 @@
 ﻿<controls:MyContentDialog x:Class="ExViewer.Views.EhWikiDialog"
-               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-               xmlns:local="using:ExViewer.Views"
-               xmlns:controls="using:ExViewer.Controls"
-               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-               x:Uid="Views/EhWikiDialog/ContentDialog"
-               Title="TITLE"
-               FullSizeDesired="True"
-               PrimaryButtonText="Ok"
-               RequiresPointer="WhenFocused"
-               mc:Ignorable="d">
-
+                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                          xmlns:local="using:ExViewer.Views"
+                          xmlns:controls="using:ExViewer.Controls"
+                          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                          x:Uid="Views/EhWikiDialog/ContentDialog"
+                          Title="TITLE"
+                          FullSizeDesired="True"
+                          PrimaryButtonText="Ok"
+                          RequiresPointer="WhenFocused"
+                          mc:Ignorable="d">
     <Grid>
         <Border Width="500" />
         <WebView x:Name="wv"
+                 DefaultBackgroundColor="{ThemeResource SystemChromeMediumLowColor}"
                  NavigationStarting="wv_NavigationStarting"
                  ScrollViewer.VerticalScrollBarVisibility="Auto"
                  Visibility="Collapsed" />
