--- a/ExViewer/Themes/GenericOverride.xaml
+++ b/ExViewer/Themes/GenericOverride.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="ScrollBar">
+    <!--<Style TargetType="ScrollBar">
         <Setter Property="MinWidth"
                 Value="12" />
         <Setter Property="MinHeight"
@@ -300,7 +300,7 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
 
     <Style TargetType="PivotHeaderItem">
         <Setter Property="Height"
